[project]
name = "polako-finance"
version = "0.1.4"
description = "Official async Python SDK for Polako Finance payment gateway"
authors = [{ name = "Polako Finance", email = "support@polako-finance.com" }]
readme = {content-type = "text/markdown", file = "README.pypi.md"}
license = { text = "MIT" }
keywords = ["polako-finance", "payments", "api", "payment-gateway", "async", "httpx"]
requires-python = ">=3.9"
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]

dependencies = [
    "httpx[http2] >= 0.25",
]

[project.urls]
Homepage = "https://polako-finance.com"
Documentation = "https://docs.polako-finance.com"
Repository = "https://github.com/Polako-Finance/python-sdk"
"Bug Tracker" = "https://github.com/Polako-Finance/python-sdk/issues"

[tool.poetry]
name = "polako-finance"
version = "0.1.4"
description = "Official async Python SDK for Polako Finance payment gateway"
authors = ["Polako Finance <support@polako-finance.com>"]
readme = "README.pypi.md"
license = "MIT"
homepage = "https://polako-finance.com"
repository = "https://github.com/Polako-Finance/python-sdk"
documentation = "https://docs.polako-finance.com"
keywords = ["polako-finance", "payments", "api", "payment-gateway", "async", "httpx"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
packages = [
    { include = "polako", from = "src" },
    { include = "polako/sdk", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.9"
httpx = {extras = ["http2"], version = "^0.25"}

[tool.poetry.group.dev.dependencies]
pytest = ">=7.4.0"
pytest-asyncio = ">=0.21.1"
pytest-cov = ">=4.1.0"
black = ">=23.0.0"
isort = ">=5.12.0"
mypy = ">=1.5.1"
flake8 = ">=7.0.0"
pre-commit = "^4.0.0"

[tool.black]
line-length = 128
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 128
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_gitignore = true

[tool.flake8]
max-line-length = 128
extend-ignore = ["E203", "W503"]
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "build",
    "dist"
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
no_strict_optional = true
exclude = ["tests/"]

[tool.bandit]
exclude_dirs = ["tests/", ".venv/"]
skips = ["B101", "B601"]

[tool.pydocstyle]
convention = "google"
add_ignore = ["D100", "D104", "D107"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
